# emo_classifier

./: .gitignore  MIDDAY_SUM_FULL_CONTEXT.md  README.md  pyproject.toml  requirements.txt
data/: labels_template.csv
scripts/: build_labels_from_fma.py  build_labels_from_folders.py  build_labels_from_jamendo.py  build_labels_from_spotify.py  build_relabel_queue.py  download_jamendo_subset.py  export_spotify_playlist_tracks.py  merge_label_csvs.py  run_fma_first_pass.sh
src/emo_classifier/: __init__.py  audio.py  cli.py  embeddings.py  inference.py  training.py
